--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
     </div>
 	
     <div class='heade text-center text-light'>
-    	<p style='font-size:40'>
+    	<p style='font-size:40px'>
           LAUNCHER
       </p>
       
-      <p style='font-size:25'>
+      <p style='font-size:25px'>
           Launcher your member count to space!
       </p>
       
